# rdiff

./: .pre-commit-config.yaml  Cargo.toml
config/: test.yaml  xreq_test.yaml
examples/: config.rs  interact.rs  similar-inline.rs  syntect.rs  test.yaml
src/: cli.rs  config.rs  lib.rs  main.rs  req.rs  utils.rs
src/config/: mod.rs  rdiff.rs  xreq.rs
