[package]
name = "rdiff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
console = "0.15.11"
http-serde = "2.1.1"
reqwest = { version = "0.12.15" , default-features=false, features = ["rustls-tls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
similar = { version = "2.7.0", features = ["inline", "bytes"] }
tokio = { version = "1.44.2", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
