[package]
name = "rdiff"
version = "0.1.0"
edition = "2024"
authors = ["whn"]

[[bin]]
name = "rdiff"
path = "src/bin/rdiff.rs"

[[bin]]
name = "xreq"
path = "src/bin/xreq.rs"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
clap = { version = "4.5.35", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
http-serde = "2.1.1"
reqwest = { version = "0.12.15" , default-features=false, features = ["rustls-tls"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_qs = "0.15.0"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.34"
similar = { version = "2.7.0", features = ["inline", "bytes"] }
syntect = "5.2.0"
tokio = { version = "1.44.2", features = ["full"] }
url = { version = "2.5.4", features = ["serde"] }
